# Pacman_Game_Qt_Cplusplus_QML

./: CMakeLists.txt  README.md
assets/: resources.qrc
qml/: Arena.qml  CMakeLists.txt  GameArea.qml  GameInput.qml  Main.qml  Score.qml  UiScaler.qml
qml/entities/: Pacman.qml
qml/entities/ghosts/: AbstractGhost.qml  BlueGhost.qml  OrangeGhost.qml  PurpleGhost.qml  RedGhost.qml
qml/overlays/: EndGameOverlay.qml  EscapeMenuOverlay.qml  TextOverlay.qml
qml/pellets/: PowerPellet.qml  StandardPellet.qml
src/: CMakeLists.txt  abstract_movement_manager.cpp  abstract_movement_manager.h  controller.cpp  controller.h  coordinates.cpp  coordinates.h  direction.h  game.cpp  game_config.cpp  game_config.h  game_coordinator.cpp  game_coordinator.h  game_loop.cpp  game_loop.h  game_result.h  ghost_movement_manager.cpp  ghost_movement_manager.h  ghost_timing_manager.cpp  ghost_timing_manager.h  input_handler.cpp  main.cpp  model.cpp  model.h  overlay_manager.cpp  overlay_manager.h  pacman_movement_manager.h  path_points.cpp  path_points.h  qml_helper.h  score_manager.h  window_manager.cpp  window_manager.h
src/collision_detection/: ghost_collision_detector.h  pellet_collision_detector.h  utils.h
src/entities/: movable_character.cpp  movable_character.h  pacman.h
src/entities/ghosts/: abstract_ghost.cpp  abstract_ghost.h  blue_ghost.h  orange_ghost.h  purple_ghost.h  red_ghost.h
src/pellets/: abstract_pellet.h  abstract_pellets_manager.h  abstract_pellets_model.h  abstract_pellets_model_impl.h  power_pellet.h  power_pellets_manager.h  power_pellets_model.h  standard_pellet.h  standard_pellets_manager.h  standard_pellets_model.h
src/state_machine/: game_state_manager.h  game_state_type.h  i_state_actions.h
src/state_machine/states/: ended_defeat_state.h  ended_victory_state.h  escape_menu_state.h  initialization_state.h  paused_for_debug_state.h  ready_to_start_state.h  running_state.h
tests/: CMakeLists.txt
tests/src/: ghost_slowdown_test.cpp  ghost_starting_box_test.cpp  ghost_test.cpp  pacman_test.cpp
